--- a/pom.xml
+++ b/pom.xml
@@ -95,13 +95,13 @@
 		
 	    <repository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Releases Nexus Repository</name>
+	      <name>lucid-webapp-releases</name>
 	      <url>http://3.128.202.36:8081/repository/lucid-webapp-releases</url> 
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Snapshot Nexus Repository</name>
+	      <name>lucid-webapp-releases</name>
 	      <url>http://3.128.202.36:8081/repository/lucid-webapp-snapshot</url>
 	    </snapshotRepository>
 	</distributionManagement>
