--- a/pom.xml
+++ b/pom.xml
@@ -94,15 +94,15 @@
 	<distributionManagement>
 		
 	    <repository>
-	      <id>nexus1</id>
+	      <id>nexus</id>
 	      <name>polestar-webapp-releases</name>
-	      <url>http://3.128.202.36:8081/repository/polestar-webapp-releases/</url> 
+	      <url>http://3.137.165.237:8081/repository/polestar-releases/</url> 
 	    </repository>
 	    
 	    <snapshotRepository>
-	      <id>nexus1</id>
+	      <id>nexus</id>
 	      <name>polestar-webapp-snapshot</name>
-	      <url>http://3.128.202.36:8081/repository/polestar-webapp-snapshot/</url>
+	      <url>http://3.137.165.237:8081/repository/polestar-snapshot/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
